# ChangeLog for app-portage/findcruft
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Mar 2011; Justin Lecher <jlec@gentoo.org> findcruft-1.0.4-r1.ebuild:
  Fixed up ebuild
