@@ -1,6 +1,10 @@
 # ChangeLog for app-portage/findcruft
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  01 Jul 2013; Justin Lecher <jlec@gentoo.org> findcruft-1.0.4-r1.ebuild,
+  metadata.xml:
+  Bump to latest EAPI
 
   31 Mar 2011; Justin Lecher <jlec@gentoo.org> findcruft-1.0.4-r1.ebuild:
   Fixed up ebuild
